--- a/style.css
+++ b/style.css
@@ -1,13 +1,69 @@
-*{
-    margin:0;
-    padding:0;
-
+* {
+  margin: 0;
+  padding: 0;
 }
-.head{
-    width: 100%;
-    height: 49px;
+main {
+  width: 100%;
 }
-.email{
-    height:39;
-    width: 760;
+header {
+  margin-top: 1rem;
+}
+.head-line {
+  background-color: #674cae;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.email {
+  margin-left: 5rem;
+}
+.email i,
+a {
+  font-size: 12px;
+  color: white;
+}
+.address {
+  margin-right: 12rem;
+}
+.address i {
+  color: white;
+}
+.address-i {
+  text-decoration: none;
+}
+.head-block {
+  width: 100%;
+  height: 6.7rem;
+}
+.head-block img {
+  width: 100%;
+}
+/* ------------------ */
+nav {
+  display: flex;
+  margin-top: 1rem;
+  padding: 10px 0 8px 10px;
+  height: 4.5rem;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+nav ul {
+  list-style: none;
+  display: flex;
+  padding-top: 2rem;
+}
+nav li {
+  margin-left: 1.7rem;
+  color: #674cae;
+  font-weight: 500;
+}
+/* ----------------------------------------- */
+.main-photo {
+  width: 100%;
+}
+.main-photo img {
+  width: 100%;
+  display: block;
 }
